[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Mappa.png" type="Texture" id=1]
[ext_resource path="res://GameScene/Mappa/Mappa.gd" type="Script" id=2]
[ext_resource path="res://Global/Font/Rubik/Rubik-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
extra_spacing_bottom = -6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.294118, 0.576471, 0.74902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=3]
size = 14
extra_spacing_bottom = -6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.94902, 0.529412, 0.0196078, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Button1" type="Button" parent="TextureRect"]
anchor_left = 0.268555
anchor_top = 0.645
anchor_right = 0.475586
anchor_bottom = 0.905
rect_pivot_offset = Vector2( 835, -286 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureRect/Button1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -71.0
margin_right = 128.0
margin_bottom = -29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Entra nel villaggio"
align = 1
autowrap = true

[node name="Button2" type="Button" parent="TextureRect"]
anchor_left = 0.580078
anchor_top = 0.5
anchor_right = 0.767578
anchor_bottom = 0.856667
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureRect/Button2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -70.0
margin_right = 128.0
margin_bottom = -28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Completa il 
1° villaggio"
align = 1
autowrap = true

[node name="Button3" type="Button" parent="TextureRect"]
anchor_left = 0.552734
anchor_top = 0.075
anchor_right = 0.759766
anchor_bottom = 0.308333
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureRect/Button3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -70.0
margin_right = 128.0
margin_bottom = -28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Completa il 
2° villaggio"
align = 1
autowrap = true

[node name="Button4" type="Button" parent="TextureRect"]
anchor_left = 0.268555
anchor_top = 0.108333
anchor_right = 0.466797
anchor_bottom = 0.438333
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TextureRect/Button4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -70.0
margin_right = 128.0
margin_bottom = -28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Completa il 
3° villaggio"
align = 1
autowrap = true

[connection signal="mouse_entered" from="TextureRect/Button1" to="." method="_mouse_entered_1"]
[connection signal="mouse_exited" from="TextureRect/Button1" to="." method="_mouse_exited"]
[connection signal="pressed" from="TextureRect/Button1" to="." method="_on_Button1_pressed"]
[connection signal="mouse_entered" from="TextureRect/Button2" to="." method="_mouse_entered_2"]
[connection signal="mouse_exited" from="TextureRect/Button2" to="." method="_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/Button3" to="." method="_mouse_entered_3"]
[connection signal="mouse_exited" from="TextureRect/Button3" to="." method="_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect/Button4" to="." method="_mouse_entered_4"]
[connection signal="mouse_exited" from="TextureRect/Button4" to="." method="_mouse_exited"]
